--- a/Homework/main.css
+++ b/Homework/main.css
@@ -1,6 +1,10 @@
 body {
     font-size: 40px;
     margin: 100px;
+    /* display: flex;
+    flex-wrap: wrap;
+    flex-direction: row; */
+
 }
 
 .rezstyle {
