--- a/clients/public/app.css
+++ b/clients/public/app.css
@@ -10867,3 +10867,23 @@ body {
   justify-content: flex-end;
   gap: 10px;
 }
+
+.msg-container {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  margin-top: 30px;
+}
+.msg-container .msg-bin {
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+}
+
+.login {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
