--- a/clients/public/app.css
+++ b/clients/public/app.css
@@ -10887,3 +10887,12 @@ body {
   align-items: center;
   height: 100vh;
 }
+
+form.logout {
+  display: inline-block;
+}
+form.logout button {
+  border: none;
+  outline: none;
+  background-color: transparent;
+}
