--- a/clients/src/app.scss
+++ b/clients/src/app.scss
@@ -28,3 +28,12 @@ body {
     height: 100vh;
 
 }
+
+form.logout {
+    display: inline-block;
+    button {
+        border: none;
+        outline: none;
+        background-color: transparent;
+    }
+}
