--- a/0007/025/style.css
+++ b/0007/025/style.css
@@ -24,13 +24,14 @@ li .id {
 li .name {
     color: black;
     font-size: 18px;
-    width: 100px;
+    width: 200px;
+    letter-spacing: 5px;
 }
 
 li .h {
     color: black;
     font-size: 18px;
-    width: 150px;
+    width: 100px;
 }
 
 li .t {
@@ -39,6 +40,34 @@ li .t {
     width: 100px;
 }
 
+form {
+    padding: 30px;
+    border: 1px solid skyblue;
+    display: flex;
+    flex-direction: column;
+    margin: 20px 45px;
+}
 
+form>div {
+    margin: 10px;
+}
 
+label {
+    width: 70px;
+    display: inline-block;
+}
+
+button {
+    cursor: pointer;
+    background-color: skyblue;
+    padding: 5px 30px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: white;
+    outline: none;
+    border-radius: 5px;
+    border: none;
+    line-height: 1.8;
+}
 
