--- a/pirmas/resources/sass/app.scss
+++ b/pirmas/resources/sass/app.scss
@@ -12,9 +12,11 @@
     width: 100%;
     justify-content: space-between;
     align-items: center;
+
     .client-info {
         display: flex;
         justify-content: space-around;
+
         span {
             color: crimson;
             font-weight: bold;
@@ -22,12 +24,50 @@
             padding-left: 20px;
         }
     }
+
     .buttons {
         display: flex;
         justify-content: flex-end;
         gap: 10px;
     }
 }
+
+.order-line {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+
+    .order-info {
+        display: flex;
+        justify-content: space-around;
+
+        .order-data {
+            width: 300px;
+        }
+
+        .client {
+            color: skyblue;
+            font-weight: bold;
+            letter-spacing: 5px;
+            padding-right: 20px;
+            width: 300px;
+            text-decoration: none;
+            transition: all .3s;
+
+            &:hover {
+                color: darken(skyblue, 50%);
+            }
+        }
+    }
+
+    .buttons {
+        display: flex;
+        justify-content: flex-end;
+        gap: 10px;
+    }
+}
+
 .sort-filter-buttons {
     display: flex;
     justify-content: flex-end;
@@ -35,7 +75,9 @@
     gap: 10px;
     height: 100%;
     position: relative;
-    button, a {
+
+    button,
+    a {
         top: -5px;
         position: relative;
     }
