CW 0413 St.2 part 1 err

--- a/pirmas/resources/sass/app.scss
+++ b/pirmas/resources/sass/app.scss
@@ -92,3 +92,8 @@
     background-color: #eee;
     padding: 4px;
 }
+
+.modal {
+    display: block;
+    background-color: rgba(0, 0, 0, 0.226);
+}
