--- a/pirmas/resources/sass/app.scss
+++ b/pirmas/resources/sass/app.scss
@@ -28,6 +28,12 @@
             padding:  0 5px;
             color: red;
         }
+        .clients-count {
+            font-weight: bold;
+            padding:  0 5px;
+            color: red;
+            line-height: 3em;
+        }
 
     }
 
